--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   label:
-    rail_tuts: "Let's shop with Sun Bear Shop!"
+    rail_tuts: "The Ruby on Rails Tutorial Sample App"
     rail_help: "Rails Tutorial help section"
     by: "by"
     welcome: "Let's shop with %{logo}!"
@@ -11,6 +11,9 @@ en:
     email: "Email"
     pass: "Password"
     confirm: "Confirmation"
+    remember: "Remember me"
+    edit: "Edit User's Profile"
+    sure: "You sure?"
   link:
     home: "Home"
     about: "About"
@@ -22,9 +25,21 @@ en:
     logo: "Sun Bear Shop"
     create: "Create my account"
     series: "screencast series"
+    users: "Users"
+    profile: "Profile"
+    setting: "Settings"
+    logout: "Log Out"
+    account: "Account"
+    change: "Change"
+    save: "Save changes"
+    delete: "delete"
     book_html: is a <a href="https://www.railstutorial.org/book">book</a>
   message:
     nil_user: "User is not found!"
+    fail_login: "Invalid email/password combination"
     error:
       one: "The form contains %{count} error."
       other: "The form contains %{count} errors."
+    profile_update: "Profile updated"
+    user_del: "User deleted"
+    login_plz: "Please log in!"
