show history order

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,8 @@ en:
     stars: "Stars"
     review: "Review"
     enter_review: "Enter your review..."
+    history: "History"
+    receipt: "Receipt"
   link:
     home: "Home"
     help: "Help"
