send mail order

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,3 +85,7 @@ en:
     review:
       one: "%{count} review"
       other: "%{count} reviews"
+  email:
+    order: "Order mail"
+    request: "Request order from %{name}"
+    check_order: "Check Order"
