--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -49,6 +49,9 @@ vi:
     cart: "Gio hang"
     continue: "Tiep tuc mua hang"
     checkout: "Thanh toan"
+    manager: "Quan ly"
+    add_product: "+ Tao moi san pham"
+    add_menu: "+ Tao moi danh muc"
   form:
     name: "Ten"
     email: "Email"
@@ -67,6 +70,9 @@ vi:
     thank_pay: "Cam on ban da mua hang!"
     review_success: "Danh gia thanh cong!"
     review_fail: "Danh gia that bai!"
+    create_ok: "%{name} duoc tao thanh cong"
+    update_ok: "%{name} duoc cap nhat thanh cong"
+    del_ok: "%{name} da bi xoa"
   product:
     unit: "$"
     amount:
