--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,6 +96,8 @@ en:
       one: "There are %{count} product."
       other: "There are %{count} products."
     out_stock: "is out of stock, just %{count} left"
+    added: "%{name} is added %{count} product into cart"
+    add_failed: "Add product is failed."
     review:
       one: "%{count} review"
       other: "%{count} reviews"
