--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -96,6 +96,8 @@ vi:
       one: "Co %{count} san pham."
       other: "Co %{count} san pham."
     out_stock: "het hang, chi con %{count}"
+    added: "%{name} da them %{count} san pham vao gio hang"
+    add_failed: "Viec them san pham da that bai."
     review:
       one: "%{count} danh gia"
       other: "%{count} danh gia"
