--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,6 +72,7 @@ en:
     add_menu: "+ Add new category"
     template: "Template"
     more_detail: "More Detail >>"
+    share: "Share"
   form:
     name: "Name"
     email: "Email"
