--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -46,6 +46,13 @@ vi:
     receipt: "Hoa don"
     none: "Khong"
     user: "Nguoi dung"
+    statistic: "Statistic"
+    day: "Day"
+    chart:
+      user_day: "Nguoi dung moi hang ngay"
+      order_day: "Don hang theo ngay trong tuan"
+      order_cancel: "Don hang bi huy moi ngay"
+      product_most: "San pham duoc mua nhieu nhat"
   link:
     home: "Trang chu"
     help: "Tro giup"
@@ -64,6 +71,7 @@ vi:
     add_product: "+ Tao moi san pham"
     add_menu: "+ Tao moi danh muc"
     template: "file mau"
+    more_detail: "Chi tiet >>"
   form:
     name: "Ten"
     email: "Email"
